# CiS2021-hackathon

./: .gitignore  00-intro.ipynb  01-connections.ipynb  01-timesync.ipynb  02-misc.ipynb  02-timesync.ipynb  03-misc.ipynb  03-plant.ipynb  LICENSE  README.md  environment.yml  interface_mapping_table.rst  launch_local.sh  local.Docker  postBuild  postBuild.bat  start  utils.py
.github/: issue_template.md
images/: roots.xcf
input/: co2.txt  intensity.txt
models/: CMakeLists.txt  Makefile  __init__.py  light.R  light.c  light.cpp  light.f90  light.py  light_filter.py  light_transform.py  light_v0.R  light_v0.cpp  light_v0.f90  light_v0.py  microbe.py  plant_io_mesh.py  plant_output_mesh.py  plant_v0.py  plant_v1.py  plant_v2.py  plant_v2_split.py  reflectance.py  roots_v0.c  roots_v0.py  roots_v1.c  roots_v1.py  shoot_v0.py  shoot_v1.py  shoot_v1_meshout.py  shoot_v2.py  shoot_v2_copies.py  shoot_v2_split.py  sine_model.f90  sine_model.py
solutions/: copy_files.py
yamls/: connection_demo.yml  connections_filter_function.yml  connections_filter_statement.yml  connections_transform_function.yml  connections_transform_statement.yml  connections_v0.yml  connections_v1.yml  light.yml  light_R.yml  light_c.yml  light_cpp.yml  light_fortran.yml  light_to_file.yml  light_v0_R.yml  light_v0_cpp.yml  light_v0_fortran.yml  light_v0_python.yml  light_v1_python.yml  light_v2_python.yml  model_demo.yml  plant_io_mesh.yml  plant_output_mesh.yml  plant_v0.yml  plant_v1.yml  plant_v2.yml  plant_v2_split.yml  roots.yml  roots_v0.yml  roots_v0_c.yml  roots_v1_c.yml  roots_v1_make.yml  (+11 more)
(+37 files in other folders)
