LINK_DIRECTORIES(/usr/lib)
LINK_DIRECTORIES(/usr/local/lib)
LINK_DIRECTORIES(/Users/langmm/miniconda3/envs/conda36/lib)
LINK_DIRECTORIES(/Users/langmm/miniconda3/envs/conda36/lib)
LINK_DIRECTORIES(/Users/langmm/miniconda3/envs/conda36/lib)
LINK_DIRECTORIES(/Users/langmm/yggdrasil/yggdrasil/languages/c)
LINK_DIRECTORIES(/Users/langmm/yggdrasil/yggdrasil/languages/c)
set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
LINK_DIRECTORIES(/Users/langmm/miniconda3/envs/conda36/lib)
cmake_minimum_required(VERSION 2.6)
project(roots_v1)

ADD_EXECUTABLE(roots_v1 roots_v1.c)
INCLUDE(ygg_cmake_roots_v1.txt)